Yusuf Kamaranli in a snit

--- a/Coup in Tripoli.page
+++ b/Coup in Tripoli.page
@@ -4,3 +4,5 @@
 - Eaton apparently promised Hamet $10,000, which he saw as a bargain compared to the $1,000,000 they would pay Yusuf in tribute (BW2:97, 28 March 1802)
 - Eaton writes a letter to any American commander who might intercept Hamet, asking that they give Hamet any assistance to get to Malta, where Hamet is supposed to wait for him (BW2:97, 29 March 1802)
 - [Andrew Sterett]() reports that Hamet made it to Malta; Eaton is pleased with how things are going: " things seem to be in a good train notwithstanding former reports." (BW2:158, 21 May 1802)
+- BW2:224: [William Eaton]() writes to SecState that he had heard that Yusuf Karamanli was upset when he heard that Hamet was in Malta, and he arrested several leaders of villages; "a spirit of Universal discontentment and revolt pervade all clases of the subjects except a few personally attached to the reigning Bashaw"
+    - [Yusuf Karamanli]() has furthermore decreed that he will burn all American and Swedish prisoners if a shot is fired at Tripoli town: Eaton declares "Shall such a monster live, and dictate laws to nations who could crush him!" (5 August 1802)
