--- a/Diplomacy.page
+++ b/Diplomacy.page
@@ -36,3 +36,7 @@ Title: "Olive Branch in One Hand"?
     - Small presents would of course be expected for Tunis's mediatorial role
     - Eaton is not convinced that going through Tunis is a good idea: "These overtures go to prove the embarrassed situation of our enemy; and promise, if suitable advantage is taken of it, a peace on our own terms. We hold the high grounds of him at all points" 
     - Eaton notes that Tunis is not aware of Eaton's master plan for restoring [Hamet Karamanli](); in the meantime, "let us amuse the usurper with his own propositions"
+
+## Algiers
+- BW2:224: [William Eaton]() hears that the dey of Algiers has demanded that the bashaw of Tripoli release the prisoners from the [Franklin](), declaring that "the Americans were his best friends" because they had given his cargo transport to Constantinople when he needed it (in the [USS *George Washington*]()
+    - Eaton is skeptical of the dey's motives in this declaration, seeing ulterior motives in his attempt to wriggle back into the USA's good graces; however, he is happy to have any help to bring the bashaw to terms (5 August 1802)
