reestablishment of peace with Morocco

--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -15,3 +15,8 @@
 - BW2:210: [James Simpson]() goes to Tangier to negotiate peace with Morocco; he also notes that the Moroccan frigate that has been being built is ready for launch and has been authorized to attack Americans (27 July 1802)
 - BW2:220: [James Simpson]() writes to the emperor of Morocco pleading patience, as the channels of communication between the United States and the Mediterranean are terribly slow (31 July 1802)
 - BW2:221: [James Simpson]() writes that the ship built to detain Americans is staying in port due to the presence of the [USS *Adams*]() and the [USS *Enterprise*](), and that Hajj Abdashaman Hashash (a Moroccan minister?) has promised to recommend discontinuation of hostilities toward America; Simpson did agree to let a Moroccan ship go to Tunis with wheat (3 August 1802)
+
+### Reestablishment of peace
+- BW2:226: [James Simpson]() receives a letter from Sidi Mahomet Ben Absalem Salawy, secretary of state of Morocco, 6 August 1802, reinstating the terms of their previous agreement--presents once a year, or if it is difficult to get to Morocco because of distance, every two years
+    - Simpson is ordered to return to his house
+    - Salawy maintains that the current unrest is entirely due to negligence by the Americans, but the emperor "now forgives all that"
