--- a/Tripolitan strategy.page
+++ b/Tripolitan strategy.page
@@ -1,5 +1,6 @@
 # Blockade running
 - BW1:645: [Nicholas Nissen]() reports that there were 5 vessels out in the sea to capture Americans, though one was lost with all hands (20 December 1801)
+- BW2:228: [William Eaton]() records that the bey of Tunis acknowledged that the Tunisians could not fight the Americans head-to-head, but "You cannot do us any hurt. We will lay up our large ships and send out our small cruisers to distress your commerce - A fly in a man's throat, said he, though it will not kill him, will make him vomit." (7 August 1802)
 
 
 # Alternate vessels
