peace restored with Morocco

--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -20,3 +20,4 @@
 - BW2:226: [James Simpson]() receives a letter from Sidi Mahomet Ben Absalem Salawy, secretary of state of Morocco, 6 August 1802, reinstating the terms of their previous agreement--presents once a year, or if it is difficult to get to Morocco because of distance, every two years
     - Simpson is ordered to return to his house
     - Salawy maintains that the current unrest is entirely due to negligence by the Americans, but the emperor "now forgives all that"
+- BW2:231: Simpson writes to [Richard Valentine Morris]() that as he has returned to his house and duties, Morris should "consider Peace restored," though there are a few details of the treaty left to be negotiated (12 August 1802)
