Boston doing convoy

--- a/Convoy.page
+++ b/Convoy.page
@@ -54,3 +54,4 @@ what is worse, Slavery", 15 July 1802
 ## Records of convoy
 - BW2:65: [William Bainbridge]() records taking 11 vessels through the Straits of Gibraltar, 23 February 1802
 - BW2:78: [USS George Washington]() took vessels from Leghorn to Marseilles, February 1802
+- BW2:232: [USS *Boston*]() took 4 vessels from Marseilles to Barcelona, Alicante, and down the straits, 6 August 1802
