money for conciliation

--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -47,3 +47,4 @@ awe inspired by a display of our force before his eyes and his capital."
 
 # Keeping the peace
 - BW1:394-95: [James Leander Cathcart]() to Charles Lee, sec of state, 1 November 1800: Cathcart petitioned the dey of Algiers to intervene against Tripoli's breaking their treaty with the USA, but does not express much hope that anything will be done
+- BW2:232: SecNav informs [Richard Valentine Morris]() that the [USS *New York*]() is bringing him $20,000-30,000 to be dispensed to whichever Barbary state might need temporary conciliation (13 August 1802)
