europeans have to stop paying also

--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -32,6 +32,8 @@ awe inspired by a display of our force before his eyes and his capital."
 - BW2:130: SecNav to [Richard Valentine Morris](): "Holding out the olive Branch in one hand & displaying in the other the means of offensive operations, may produce a peaceful disposition towards us in the mind of the Bashaw, and essentially contribute to our obtaining an advantageous treaty with him" (20 April 1802).
 - BW2:163: [Alexander Murray]() writes that "it is not amiss to shew those Folks [Tunisians] our Ships, now, & then, they are powerful advocates in our favor" (1 June 1802)
 - BW2:218: [Alexander Murray]() admits that he is not certain whether a skirmish in which the Americans demonstrated superior fire power over the Tripolitan fleet would actually accomplish anything in terms of treaty negotiations (30 July 1802)
+- BW2:235: [Alexander Murray]() thinks that force is pointless unless the European nations also stop paying tribute: "America hath certainly shewn a very laudable pride, & a dignity, in her efforts to abolish the obnoxious custom of paying Tribute, but unless the European Nations, cooperate more generally with us, & abolish that narrow minded Policy, that yet prevails with some of the most potent Powersl much better situated than we are, for keeping up perpetual Warfare with them, or till they are brought to proper terms, it will be more prudent for us, also, to submit to the Indignity, at the expence of our Pride, they are not a Commercial People therefore we can make no impression upon them"
+    - Murray seems to be arguing here against [Blockade effectiveness]() also?
 
 # Use of payment
 ## Price of settlement
