no peace with Morocco yet

--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -21,3 +21,4 @@
     - Simpson is ordered to return to his house
     - Salawy maintains that the current unrest is entirely due to negligence by the Americans, but the emperor "now forgives all that"
 - BW2:231: Simpson writes to [Richard Valentine Morris]() that as he has returned to his house and duties, Morris should "consider Peace restored," though there are a few details of the treaty left to be negotiated (12 August 1802)
+- BW2:235-36: The path to peace is a bit rockier than Simpson expected: while negotiations are ongoing, Simpson suggests to [Richard Valentine Morris]() that he should leave the [USS *Adams*]() off Gibraltar, where it is available as a show of force and to salute with 13 guns when peace is officially re-established (16 August 1802)
