--- a/Science.page
+++ b/Science.page
@@ -28,3 +28,8 @@
 ## [Regulations about quarantine]()
 ## [Expectations about quarantine]()
 ## [Abuse of quarantine]()
+
+## Deaths in the navy
+- [Accidental deaths]()
+- [Deaths from illness]()
+- [Death from unknown cause]()
