--- a/Science.page
+++ b/Science.page
@@ -29,7 +29,7 @@
 ## [Expectations about quarantine]()
 ## [Abuse of quarantine]()
 
-## Deaths in the navy
+# Deaths in the navy
 - [Accidental deaths]()
 - [Deaths from illness]()
 - [Death from unknown cause]()
