--- a/Science.page
+++ b/Science.page
@@ -25,9 +25,9 @@
 ## [Dealing with disease]()
     
 # Quarantine
-## [Regulations about quarantine]()
-## [Expectations about quarantine]()
-## [Abuse of quarantine]()
+- [Regulations about quarantine]()
+- [Expectations about quarantine]()
+- [Abuse of quarantine]()
 
 # Deaths in the navy
 - [Accidental deaths]()
