--- a/Deaths from illness.page
+++ b/Deaths from illness.page
@@ -1,1 +1,1 @@
-- BW2:102: USS Constellation loses three men before even making it to the Mediterranean: 2 from small pox and one from a “violent Cold” (1 April 1802)
+- BW2:102: [USS Constellation]() loses three men before even making it to the Mediterranean: 2 from small pox and one from a “violent Cold” (1 April 1802)
