--- a/Convoy.page
+++ b/Convoy.page
@@ -55,3 +55,4 @@ what is worse, Slavery", 15 July 1802
 - BW2:65: [William Bainbridge]() records taking 11 vessels through the Straits of Gibraltar, 23 February 1802
 - BW2:78: [USS George Washington]() took vessels from Leghorn to Marseilles, February 1802
 - BW2:232: [USS *Boston*]() took 4 vessels from Marseilles to Barcelona, Alicante, and down the straits, 6 August 1802
+- BW2:237: [USS *Chesapeake*]() and [USS *Enterprise*]() takes 20 vessels from Gibraltar to Malta by way of Leghorn, 17 August 1802
