supplies at Malta

--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -38,3 +38,4 @@ One of the constant questions for the squadron was whether to get supplies from 
 - BW2:24: [Richard Dale]() suggests that the [USS *Philadelphia*]() stop for supplies at Leghorn before coming back to the USA, 18 January 1802
 - BW2:26: Dale says that [Daniel McNeill]() should be able to get supplies from the British agent (uncertain at what port), 18 January 1802
 - BW2:87: [Stephen Cathalan]() supplies [USS *George Washington*]() at Marseilles in Feburary 1802
+- BW2:238: [USS *Constellation*]() gets supplies at Malta: fresh provisions, Spirits, Vinegar, Flour, Cheese, Bread, Coals, Wood, &c., 17 August 1802
