--- a/Captivity.page
+++ b/Captivity.page
@@ -11,6 +11,7 @@
     - Eaton recalls that there might be a possibility of prisoner exchange in Tripoli based on some Turkish prisoners the USA released in summer 1801, 11 July 1802 (BW2:201)
     - [James Leander Cathcart]() also wants to redeem the crew, but notes that the brig itself and the cargo were lost--to try to regain those would set a "pernicious precedent" (BW2:204)
     - [Alexander Murray]() notes the arrival of the two Tripolitan galleys that took the *Franklin* at Tripoli, but does not record that he in any way tried to give chase or attack said ships (BW2:207, 21 July 1802)
+    - [Alexander Murray]() reports that 2 of the crew escaped in a Greek boat during the skirmish between the [USS *Constellation*]() and the Tripolitan gun boats; 3 had been claimed by the British; so only 4 were left in captivity as of 20 August 1802 (BW2:242)
 
 ## Samuel Calder
 - BW1:54: Samuel Calder to House of Dominick Terry and Co., 3 November 1793
