--- a/Relations with government at home.page
+++ b/Relations with government at home.page
@@ -15,3 +15,4 @@ One of the major difficulties the navy faced in the Mediterranean was the fact t
 
 ### Getting people to go to the Med
 - BW2:83: [Thomas Truxtun]() declined to take command of the squadron unless he had a captain to sail his ship, and he could function as the commodore only; the secretary of the navy rejected his request, citing the naval officers' reduction of 1801
+- BW2:243: All officers' furloughs were countermanded in August 1802 in light of the greater need for more forces in the Med
