--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -57,6 +57,7 @@ more resembles the Savages than a civilized nation." (BW1:609)
 - [Richard Dale]() receives information from Sir [James Saumarez]() about pirates in Gibraltar Bay--the two seem to be on good terms (BW2:116)
 - [Lord Keith]() writes to [Alexander Murray]() thanking them for honoring the Duke of Kent at Gibraltar when he was there (BW2:150, 10 May 1802)
 - [William Eaton]() blames the English for helping the Tripolitans with both ship and the escape of Murad Reis from Gibraltar: "Have we still in America any body who believes in English Magnamity!" (BW2:228, 7 August 1802)
+- [Alexander Murray]() reports very favorable reception at Malta from Admiral Sir Richard Bickerton and Gov. Alexander Ball, 22 August 1802 (BW2:247)
 
 ## Naples
 - Lt. [John Shaw]() reports that Naples wants to make a treaty with the USA, and that the governor of Naples has given orders to accommodate the American navy in any way possible, 9 February 1802 (BW2:57)
