--- a/Coup in Tripoli.page
+++ b/Coup in Tripoli.page
@@ -12,6 +12,7 @@
     - Eaton used the [*Gloria*]() as his personal conveyance to make sure that Hamet made it to Malta successfully (which [Alexander Murray]() later took issue with
 - BW2:239: [Alexander Murray]() records a conversation with [Hamet Karamanli](): "I have this day had a communication with the Ligal Bashaw of Tripoli, & offered to take him to Derne & to aid him in any measures he chose to pursue, but he thinks it will be more to our advantage as well as his, to go there in an English Brig that he hath Chartered, and to try what force he can raise there, in as private a manner as possible, after which, in conjunction with the Swedish Force we can further cooperate with him by private Signals agreed upon - I am pleased with his Candor, & am purswaided if he get reinstated in his Dominions he will be Friendly to us" (18 August 1802)
 - BW2:244: SecState notes that this strategy is highly irregular but concedes that it might be beneficial nonetheless (22 August 1802)
+- BW2:250-51: [James Leander Cathcart]() writes that [Yusuf Karamanli]()'s hold on Tripoli is tenuous and that all his subjects hate him and he is constantly fearful of uprisings (25 August 1802)
 
 
 ## Outcomes
