--- a/Coup in Tripoli.page
+++ b/Coup in Tripoli.page
@@ -13,6 +13,8 @@
 - BW2:239: [Alexander Murray]() records a conversation with [Hamet Karamanli](): "I have this day had a communication with the Ligal Bashaw of Tripoli, & offered to take him to Derne & to aid him in any measures he chose to pursue, but he thinks it will be more to our advantage as well as his, to go there in an English Brig that he hath Chartered, and to try what force he can raise there, in as private a manner as possible, after which, in conjunction with the Swedish Force we can further cooperate with him by private Signals agreed upon - I am pleased with his Candor, & am purswaided if he get reinstated in his Dominions he will be Friendly to us" (18 August 1802)
 - BW2:244: SecState notes that this strategy is highly irregular but concedes that it might be beneficial nonetheless (22 August 1802)
 - BW2:250-51: [James Leander Cathcart]() writes that [Yusuf Karamanli]()'s hold on Tripoli is tenuous and that all his subjects hate him and he is constantly fearful of uprisings (25 August 1802)
+    - Cathcart also seems to be claiming that using Hamet to stage a coup was his idea to begin with
+    - Cathcart applauds Eaton's work to make the coup happen: "I must do Mt Eaton the justice to say that they [Eaton's actions] seem to have been judicious dictated by imperious necessity & an honest zeal for the success of an enterprize which promised such vast advantages to our Country"
 
 
 ## Outcomes
