Morris as lead negotiatior

--- a/Diplomacy.page
+++ b/Diplomacy.page
@@ -2,6 +2,7 @@ Title: "Olive Branch in One Hand"?
 
 ## Diplomats' orders
 - SecState to [James Leander Cathcart](): "However able this country may be to carry on the war with effect, the expence and trouble of it, and the encreased risk whilst at war with one of the Barbary powers, are with the President just motives of solicitude for the success of your negotiation" (10 May 1802, BW2:147)
+- SecNav to [Richard Valentine Morris](), writes that he is to take a primary role in negotiations with any Barbary state, though he is requested to bring [James Leander Cathcart]() into the negotiations if possible (BW2:257, 27 August 1802)
 
 
 ## Naval officers' relations with non-belligerent Barbary States
