--- a/Engagements with Tripoli.page
+++ b/Engagements with Tripoli.page
@@ -10,6 +10,7 @@
 ### 22 July 1802
 - [USS *Constellation*]() and the [*Thetis*]() encounter 9 gunboats, which they fired at for about half an hour (11:00-11:30), with no damage to the Americans or Swedish, but [Alexander Murray]() reports that the squadron inflicted damage on both ships and men (BW2:209) 
     - In a different report, Murray says there were 8 gunboats plus the admiral's galley; plus 6000 men gathered on shore, which the two frigates routed with cannon fire (BW2:218)
+- Report that [USS *Boston*]() had skirmished with the Tunisians in June 1802 turned out to be false (BW2:257)
  
 
 ## Reports of cruisers
