cooperate with other nations

--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -1,6 +1,7 @@
 # Relations with the Americans
 
 - 30 July 1801: [Richard Dale]() warns [Andrew Sterett]() to make sure his men behave in [Malta](), and to obey the laws of the port (BW1:534)
+- 27 August 1802: SecNav to [Richard Valentine Morris](): "You will cordially co-operate with the Swedes and with every other nation at War with those Barbary Powers that may have declared or waged war against us. At the same time you will cautiously avoid whatever may have a tendency to bring us in collision with any friendly State." (BW2:258)
 
 ## Spain/Algeciras
 - 15 August 1801: Spanish are actually the ones taking American ships, according to 2Lt. [John Johnson](), on board the [USS *Philadelphia*]() off Gibraltar (BW1:550)
