stores for the sick

--- a/Orders regarding stores.page
+++ b/Orders regarding stores.page
@@ -1,1 +1,2 @@
 - 3 February 1802: secretary of the Navy gives specific instructions about stores to [Constant Taber]() about how to pack pork in barrels for the use of the navy, down to how much each hog should weigh and how many pieces go in each barrel (BW2:48)
+- 1 September 1802: SecNav instructs [Richard Valentine Morris]() to provide advances to officers when requested, and instructs that provisions and stores for the surgeons to use for sick men should always be provided when requested (BW2:261-62)
