passport for Tripolitan frigate

--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -26,3 +26,4 @@
 - BW2:246: [Daniel Brent]() reports that the SecState's intention to send the gun carriages and a friendly letter to the emperor was countermanded by the heads of department (not quite sure whom this refers to), 31 August 1802
     - BW2:258: SecNav clarifies that these gun carriages were meant as a peace present to Morocco, and the declaration of war is what provoked the State Department to not send them (27 August 1802)
 - BW2:263: Simpson writes to Salawy in response to an apparent request for another embassy (presents), stating that he is not aware of any stipulation in their treaty that would require such an embassy (1 September 1802)
+- BW2:265: Morocco still wants a passport for the Tripolitan frigate at anchor in Gibraltar; Simpson writes that if the emperor decides to call the frigate Moroccan and request a passport, there's not a lot he can really do to resist that request and keep the peace (3 September 1802)
