--- a/Blockade effectiveness.page
+++ b/Blockade effectiveness.page
@@ -17,6 +17,7 @@
     - He notes yet further that the grain harvest has been good in 1802, and therefore the blockade is less effective than the previous year when Tripoli was in famine (BW2:213)
 - BW2:214: [Andrew Morris]() notes that two ships engaged in a close blockade would likely be effective around Cape Bon--he emphasizes "close," in contrast to the way the blockade has been run to this point (28 July 1802)
 - BW2:218: [Alexander Murray]() observes to the SecNav that he is left alone on the Tripoli station, as even the Swedish frigates have gone off for provisions and won't return until the middle of August; he himself must leave to re-provision in 10 days; he says that none of the otehr ships have stayed on station more than a day or two except the [USS *Boston*]() (30 July 1802)
+- BW2:266: [Alexander Murray]() suggests that there's no point in keeping up the blockade at Tripoli, as it doesn't do any good and ties up a ship that could otherwise be doing something else (presumably convoy?) (5 September 1802)
 
 ### Barrier to diplomacy
 - BW2:235: [Alexander Murray](), in addition to rehearsing the usual points about the ease with which small vessels evade the blockade, also points out that blockade has caused difficulties with the other Barbary states--" a very slight pretence for War is sufficient with them, they have nothing to loose by it, we have" (14 August 1802)
