--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -27,3 +27,6 @@
     - BW2:258: SecNav clarifies that these gun carriages were meant as a peace present to Morocco, and the declaration of war is what provoked the State Department to not send them (27 August 1802)
 - BW2:263: Simpson writes to Salawy in response to an apparent request for another embassy (presents), stating that he is not aware of any stipulation in their treaty that would require such an embassy (1 September 1802)
 - BW2:265: Morocco still wants a passport for the Tripolitan frigate at anchor in Gibraltar; Simpson writes that if the emperor decides to call the frigate Moroccan and request a passport, there's not a lot he can really do to resist that request and keep the peace (3 September 1802)
+    - BW2:268: [Hugh G. Campbell]() ([USS *Adams*]()) reports that the emperor has indeed claimed the Tripolitan frigate and preparations are underway to send her to sea, as of August 27 (7 September 1802)
+    - Campbell refused to grant a passport unless the emperor could produce vouchers that demonstrated that the frigate really belonged to Morocco
+    - Campbell entreated Simpson to figure out what to do, as without a passport, which Campbell would not grant, he would be required to seize the frigate, which would undoubtedly lead to war with Morocco
