--- a/Relations with Tunis.page
+++ b/Relations with Tunis.page
@@ -12,6 +12,7 @@
 - [James Leander Cathcart]() reports that the bey of Tunis wants the USA to join the "list of small Nations" like Sweden or Denmark, and also asked for a better consul, which Cathcart reads as a consul who will bow to all of the bey's wishes (11 June 1802, BW2:171)
     - Cathcart reflects on the disparity between how much France pays and how much the USA pays; the dishonor of not getting a salute when entering Tunis harbor; the likelihood that Tunis will want war but not while the American squadron is around.
     - Cathcart states that the British and French, who maintain consuls in the Barbary states without regard to whether they are welcome, are the model the USA should follow, rather than the model of a 'small christian nation' who changes consuls at the whim of the Barbary ruler; changing at the request of the ruler sets a precedent for dishonor in other areas
+- BW2:269: Bey of Tunis writes directly to [Thomas Jefferson](), thanking him for the presents of jewels and stores, but then demanding a 36-gun frigate of war. He says that since [William Eaton]() declined to pass along this request, he was writing to Jefferson personally in hopes of receiving this gift to "cement the ties of our friendship" (8 September 1802)
 
 ## Disputes over captured vessels
 
