--- a/Death from unknown cause.page
+++ b/Death from unknown cause.page
@@ -1,1 +1,2 @@
 - 16 August 1802: Thomas Bird, ordinary seaman on board the [USS *Constellation*]() (BW2:236)
+- 8 September 1802: Mathias Guise, ordinary seaman on board the [USS *Constellation]() (BW2:270)
