pratique at Palermo

--- a/Expectations about quarantine.page
+++ b/Expectations about quarantine.page
@@ -7,3 +7,4 @@
 - BW1:628: [Richard Dale]() writes to the Commandant of Marine at [Toulon]() that his ship has only the normal non-contagious diseases on board, and "No gratifica- tion that I could receive by going on shore, would Induce me to request it, if I had the least suspision that the Inhabitance of this place would receive any Injury by it, I have now been better than five months in those seas and have not been five days on shore, put it all togeathor, therefore Sir, I hope you will take into consideration what I have said, and give permission for me to have prattique." (7 December 1801)
 
 - BW2:267: [Alexander Murray]() and the [USS *Constellation*]() do not go on board any ships or allow anyone to board them in Tunis, lest they be quarantined at their next port (6 September 1802)
+    - Their strategy pays off: at Palermo on 10 September, they get immediate pratique (BW2:271)
