--- a/Engagements with Tripoli.page
+++ b/Engagements with Tripoli.page
@@ -19,6 +19,7 @@
 - 4 June 1802: Two Tripolitan galliots at sea ([William Eaton](), BW2:159)
 - [James Leander Cathcart]() reports 5 Tripolitan cruisers out, 7 July 1802 (BW2:194)
 - 11 August 1802: [Alexander Murray]() reports 3 Tripolitan galleys out (BW2:230)
+- 15 September 1802 (or possibly 14 October): [Stephen Cathalan Jr.]() reports 6 cruisers out of Tripoli and 2 more making ready (BW2:274)
 
 ## Captures (see [Captivity]())
 - 17 June 1802: [Andrew Morris]() and the brig [Franklin]() captured by 3 Tripolitan cruisers off Cape Pallas
