--- a/Tripoli.page
+++ b/Tripoli.page
@@ -1,3 +1,6 @@
+## Suggestions given
+- BW2:274: [Andrew Morris]() writes to [Stephen Cathalan Jr.]() at Marseilles that the Tripolitan government is very eager to make peace, and if the American commodore would come talk with authorization from the president, they could likely make peace on American terms (15 September 1802) {this letter forwarded to SecState}
+
 ## Through other nations
 
 Negotiations with Tripoli sometimes occurred through the other Barbary governments. As Algiers was the strongest of the four, it was also the most willing to step in as third party (for a price).
