--- a/Convoy.page
+++ b/Convoy.page
@@ -1,6 +1,5 @@
 One of the important but boring duties of the American squadron was to convoy American merchant vessels to and from ports in the Mediterranean. This of course took ships away from blockade duty.
 
-"It was requisite That the Essex should convoy out of this sea. The american Vessels so long detained on acct of the Threatenings of Tripoli and The Snarlings of Algiers--& murmors of Tunis." --[Richard O'Brien]() to Secretary of State, September 26, 1801 (BW1:582)
 
 ## System
 - Regulations about convoy, BW2:39-40
@@ -43,10 +42,12 @@ what is worse, Slavery", 15 July 1802
 - BW2:215: [Daniel McNeill]() in the [USS *Boston*]() doesn't even make a real effort to corral the merchant ships for convoy: at Naples he makes clear his determination to sail in one day despite American merchants asking him to wait for 3 or 4; [Charles Wadsworth]() feels certain that at other Spanish ports the outcome will be the same. Wadsworth wishes they would stay 3 or 4 days in order to give him a chance to write to upcoming ports, but McNeill will have none of it (28 July 1802)
 
 ## Benefits/necessity of convoy
+- "It was requisite That the Essex should convoy out of this sea. The american Vessels so long detained on acct of the Threatenings of Tripoli and The Snarlings of Algiers--& murmors of Tunis." --[Richard O'Brien]() to Secretary of State, September 26, 1801 (BW1:582)
 - BW2:50-51: [Richard Dale]() recommends that ships at Leghorn wait for [USS *Philadelphia*]() to arrive for convoy duty because he has received intelligence that 3 Tripolitan corsairs are abroad, 6 February 1802
 - BW2:183-84: [Richard Valentine Morris]() recommends ships wait for convoy at Cadiz if planning to go through the Straits of Gibraltar, seeing as the relations with Morocco have deteriorated significantly, 25 June 1802
 - BW2:218: [Alexander Murray]() thinks that convoy is necessary because the blockade isn't working (30 July 1802)
 - BW2:272: [William Eaton]() agrees that the blockade isn't working, but suggests that convoy isn't a good solution either: "Our merchantmen, impatient of long delay, will hazard themselves at sea; and the enemy, finding no impediment before his port, will become more enterprizing - But if this mode of protecting our commerce should be found, in some measure, to avail, its expence must increase in proportion to the increase of our commercial adventurers and the number of our enemy and its duration would be infinite" (12 September 1802) 
+- BW2:274: [Andrew Morris]() recommends obliquely that all ships in the Med use convoy: "My Situation obliges me to be Silent on the Transactions of this place but advise my Countrymen by no means to Expose Themselves in These Seas without Convoy, for Should any more have the misfortune to fall into Their hands, it will not only operate against me but the United States in General" (15 September 1802)
 
 ## Requests for convoy
 - BW2:223: [Richard Valentine Morris]() writes to [Joseph Yznardy]() that 9 merchants in Cadiz have requested convoy westward (presumably through the Straits); he tells Yznardy that until [James Simpson]() has concluded his negotiations with Morocco, he can't instruct any ship to leave for convoy duty. If the negotiations are successful, Morris seems to be suggesting that no convoy will be necessary; if not, he will send the [USS *Adams*]() to collect vessels at Cadiz and Malaga, 3 August 1802
