--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -30,3 +30,6 @@
     - BW2:268: [Hugh G. Campbell]() ([USS *Adams*]()) reports that the emperor has indeed claimed the Tripolitan frigate and preparations are underway to send her to sea, as of August 27 (7 September 1802)
     - Campbell refused to grant a passport unless the emperor could produce vouchers that demonstrated that the frigate really belonged to Morocco
     - Campbell entreated Simpson to figure out what to do, as without a passport, which Campbell would not grant, he would be required to seize the frigate, which would undoubtedly lead to war with Morocco
+
+## Meshouda
+- BW2:275: Simpson and Campbell asked for voucher from the emperor of Morocco that the Tripolitan ship was actually his, and he gave it to them: " she carrys Our Victorious Flag, and goes on the fulfillment of Our Orders and intentions. - Let no one oppose her or hinder her, neither do her any Injury; and we Order all the Consuls to despatch her, and deliver their Passports." 
