--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -23,6 +23,13 @@ One of the constant questions for the squadron was whether to get supplies from 
     - 18,000 lb of rice
     - a quantity of medicines
     - (insurance on this cargo was $15,000)
+- BW2:276: [Daniel Ludlow]() ordered to charter a supply ship for the squadron, 18 September 1802, carrying:
+    - 350 barrels of beef
+    - 280 barrels of pork
+    - 130,000 lb of bread
+    - 85 barrels of flour
+    - 450 bushels of pease
+    - 20,000 lb of rice
 
 ## In the Mediterranean
 - BW1:553: [Richard Dale]() discovers that Malta has only water, no stores, so he recommends Syracuse as a place to get supplies
