--- a/Physical accidents to ships or persons.page
+++ b/Physical accidents to ships or persons.page
@@ -12,6 +12,7 @@ Accidents to ships or people were no small matter when the squadron was deployed
     - Worth noting that Morris is generally unhappy with the condition and trim of the *Chesapeake*
 - [USS *Adams*]() reports a rotten mizzenmast upon arrival in the Med, as well as a cable damaged from poor anchorages (BW2:268, 7 September 1802)
 - [USS *New York*]() lost several sails and masts before even leaving the USA (BW2:270, 8 September 1802)
+- [USS *Constellation*]() breaks a pintle of its rudder, requiring the rudder to be unhung and the part to be replaced (around 10 days of repair time?), (BW2:277, 18 September 1802)
 
 ### To persons
 - A strange little episode: 2 midshipmen from the [USS *Essex*]() went on shore, where it seems that they dueled with each other, and Mr. Higginbotham killed Mr. Swartwout. Uncertain whether this occurred in Gibraltar or Algeciras. Higginbotham was arrested, and permission to bury Swartwout in Gibraltar was denied. (BW2:96, 27 March 1802) Swartwout was ultimately buried in Algeciras, Fort St. Iago, 28 March 1802 (BW2:97).
