--- a/Blockade effectiveness.page
+++ b/Blockade effectiveness.page
@@ -21,3 +21,6 @@
 
 ### Barrier to diplomacy
 - BW2:235: [Alexander Murray](), in addition to rehearsing the usual points about the ease with which small vessels evade the blockade, also points out that blockade has caused difficulties with the other Barbary states--" a very slight pretence for War is sufficient with them, they have nothing to loose by it, we have" (14 August 1802)
+
+## Causes for ineffectiveness
+- BW2:277: [Alexander Murray]() writes that he had to leave the blockade because he is out of almost all supplies and is probably going to go all the way to Gibraltar to get stores (18 September 1802)
