--- a/Tripolitan strategy.page
+++ b/Tripolitan strategy.page
@@ -1,6 +1,8 @@
 # Blockade running
 - BW1:645: [Nicholas Nissen]() reports that there were 5 vessels out in the sea to capture Americans, though one was lost with all hands (20 December 1801)
 - BW2:228: [William Eaton]() records that the bey of Tunis acknowledged that the Tunisians could not fight the Americans head-to-head, but "You cannot do us any hurt. We will lay up our large ships and send out our small cruisers to distress your commerce - A fly in a man's throat, said he, though it will not kill him, will make him vomit." (7 August 1802)
+- BW2:278: [Alexander Murray]() records this strategy: "off Cape Bon the only place we can have a chance of meeting with them, for such is the nature of the Coast of Barbary that they have Ports, & protection every thirty or forty Miles in the whole extent, & they never get from under cover of the Land till they run over to the European Coast for a dash, to the place they mean to try their fortune, & so well are they disguised that 'twill be hard to discriminate between them, & the Cruizers of Algiers, & Tunis, they all wear Red Colours, & can buy, or enter into collusions with the Galleys of those Regencies to procure the Pasports of our Consuls with facility, the Vessels are of the same discription, $ nothing can discover them but an act of Captureing our Vessels, or Prisoners on
+board" (18 September 1802)
 
 
 # Alternate vessels
