--- a/Diplomacy.page
+++ b/Diplomacy.page
@@ -41,3 +41,6 @@ Title: "Olive Branch in One Hand"?
 ## Algiers
 - BW2:224: [William Eaton]() hears that the dey of Algiers has demanded that the bashaw of Tripoli release the prisoners from the [Franklin](), declaring that "the Americans were his best friends" because they had given his cargo transport to Constantinople when he needed it (in the [USS *George Washington*]()
     - Eaton is skeptical of the dey's motives in this declaration, seeing ulterior motives in his attempt to wriggle back into the USA's good graces; however, he is happy to have any help to bring the bashaw to terms (5 August 1802)
+
+# Role of consul
+- BW2:278: [Alexander Murray]() writes, "I have very great attention paid me by the Prime Minister Genl Aton [or Acton] & man of the first Class of Nobility here, they all seem surprized that a Nation riseing into consequence so rapidly as America, shou'd not have a proper Representitive at Naples, for the present Person, who acts as Consul, is very contemptable & not known by any one, & a French Man, with whom I have no communication, it wou'd be of great importance to the U. States to have a Commercial Treaty at least with Naples, for such Nations as hath, have great advantages over us" (18 September 1802)
