--- a/Tripoli.page
+++ b/Tripoli.page
@@ -17,9 +17,10 @@ Negotiations with Tripoli sometimes occurred through the other Barbary governmen
     - Algerine marine minister and prime minister claim that the presence of American frigates off Tripoli negates Algiers' responsibility to guarantee the treaty
     - O'B is warned by marine minister to tread lightly around the dey, who was going to crack down on the Spanish, British, and French (to which O'B replied that he didn't care what the dey did with them, he was going to report that Algiers was no friend of America but of Tripoli)
     - The dey came to some agreement about the Franklin, which was disregarded, at which time the dey ordered the corsair and prize to leave Algiers immediately
+- BW2:279: [William Eaton]() says that "the Algerine Jew, Azulai" has told him that Algiers ordered Tripoli to give up the prisoners from the *Franklin*, but Eaton says, "we cannot suppose the Dey's interference in the present case can be pleasing to your Exy [[Yusuf Karamanli]()]: We believe it would suit better both the independence of your Ex" character and the interests of the parties that all our negociations should be direct and without the intervention of any other power" (18 September 1802) 
 
 ### Tunis
-- 462: James Leander Cathcart to Sec of State, 4 July 1802
+- 462: [James Leander Cathcart]() to Sec of State, 4 July 1802
     - Says that Eaton says that Tripoli is trying to make peace via Tunis: "We prefer peace to war when we can obtain it on honorable terms, but not otherwise."
  
  
