Nissen on prisoner exchange

--- a/Captivity.page
+++ b/Captivity.page
@@ -7,11 +7,12 @@
     - 2 more captives released as foreigners
     - Tripolitan xebec captured 9 men in an American brig off Cape Pallas on her way from Marseilles to America (BW2:194, 6 July 1802)
     - Brought to Bizerte, where [Guiseppe Manucie]() alerted [William Eaton]() of the capture
-    - [William Eaton]() is not allowed to speak to Morris; he has dire predictions about what might happen to the sailors when they reach Tripoli: "They will be carried to Tripoli, where they also will be cried for sale at public auction, like so many cattle; or, perhaps, stationed on the batteries to slay & be slain by their Countrymen" (BW2:196, 9 July 1802)
-    - Eaton recalls that there might be a possibility of prisoner exchange in Tripoli based on some Turkish prisoners the USA released in summer 1801, 11 July 1802 (BW2:201)
-    - [James Leander Cathcart]() also wants to redeem the crew, but notes that the brig itself and the cargo were lost--to try to regain those would set a "pernicious precedent" (BW2:204)
-    - [Alexander Murray]() notes the arrival of the two Tripolitan galleys that took the *Franklin* at Tripoli, but does not record that he in any way tried to give chase or attack said ships (BW2:207, 21 July 1802)
-    - [Alexander Murray]() reports that 2 of the crew escaped in a Greek boat during the skirmish between the [USS *Constellation*]() and the Tripolitan gun boats; 3 had been claimed by the British; so only 4 were left in captivity as of 20 August 1802 (BW2:242)
+- [William Eaton]() is not allowed to speak to Morris; he has dire predictions about what might happen to the sailors when they reach Tripoli: "They will be carried to Tripoli, where they also will be cried for sale at public auction, like so many cattle; or, perhaps, stationed on the batteries to slay & be slain by their Countrymen" (BW2:196, 9 July 1802)
+- Eaton recalls that there might be a possibility of prisoner exchange in Tripoli based on some Turkish prisoners the USA released in summer 1801, 11 July 1802 (BW2:201)
+- [James Leander Cathcart]() also wants to redeem the crew, but notes that the brig itself and the cargo were lost--to try to regain those would set a "pernicious precedent" (BW2:204)
+- [Alexander Murray]() notes the arrival of the two Tripolitan galleys that took the *Franklin* at Tripoli, but does not record that he in any way tried to give chase or attack said ships (BW2:207, 21 July 1802)
+- [Alexander Murray]() reports that 2 of the crew escaped in a Greek boat during the skirmish between the [USS *Constellation*]() and the Tripolitan gun boats; 3 had been claimed by the British; so only 4 were left in captivity as of 20 August 1802 (BW2:242)    
+- 22 September 1802: [Nicholas Nissen]() reports that the prisoners have been released and are on a ship on its way to Algiers; Nissen again went to bat for the American prisoners in  a big way; he requests reimbursement for the many things he purchased on their behalf (BW2:281-82) 
 
 ## Samuel Calder
 - BW1:54: Samuel Calder to House of Dominick Terry and Co., 3 November 1793
