--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -31,6 +31,7 @@
     - Campbell refused to grant a passport unless the emperor could produce vouchers that demonstrated that the frigate really belonged to Morocco
     - Campbell entreated Simpson to figure out what to do, as without a passport, which Campbell would not grant, he would be required to seize the frigate, which would undoubtedly lead to war with Morocco
 - BW2:280-81: Selawy chides Simpson for not coming to transact his business in person, telling him he's lucky that Simpson's letter passed through Selawy's hands so that Selawy could adequately represent it to the emperor (20 September 1802)
+- BW2:284: Simpson writes to Selawy that he is "a perfect stranger" to the idea that the treaty between the USA and Morocco dictates yearly gifts, citing the treaty of 1795 (27 September 1802) 
 
 ## Meshouda
 - BW2:275: Simpson and Campbell asked for voucher from the emperor of Morocco that the Tripolitan ship was actually his, and he gave it to them: " she carrys Our Victorious Flag, and goes on the fulfillment of Our Orders and intentions. - Let no one oppose her or hinder her, neither do her any Injury; and we Order all the Consuls to despatch her, and deliver their Passports." 
