Campbell takes control

--- a/Communications.page
+++ b/Communications.page
@@ -10,6 +10,7 @@
 - Communications amongst the squadron are so bad for the second cruise that [Alexander Murray]() gets all the way to Malaga without knowing that [Thomas Truxtun]() is not the commodore anymore (BW2:140, 30 April 1802)
 - Similarly, Murray does not know that [Richard Valentine Morris]() has arrived in the Mediterranean, so he gives orders to [Andrew Sterett]() and others from Tunis while Morris is sitting in Gibraltar (see BW2:164), 2 June 1802.
 - BW2:246: Despite finally hearing from Morris, Murray is not given any actual instructions from him, so he is left going his own way again, 22 August 1802
+- BW2:287: [Hugh G. Campbell](), knowing that he will not hear from Commodore [Richard Valentine Morris]() for several weeks, makes the decision to allow [James Simpson]() to issue a passport for the [*Meshouda*]() (1 October 1802)
 
 ## Communications with Barbary rulers
 - Important to remember that communications often went through at least one, maybe two translators between Barbary ruler and American commodore or diplomat
