--- a/Relations with government at home.page
+++ b/Relations with government at home.page
@@ -16,3 +16,6 @@ One of the major difficulties the navy faced in the Mediterranean was the fact t
 ### Getting people to go to the Med
 - BW2:83: [Thomas Truxtun]() declined to take command of the squadron unless he had a captain to sail his ship, and he could function as the commodore only; the secretary of the navy rejected his request, citing the naval officers' reduction of 1801
 - BW2:243: All officers' furloughs were countermanded in August 1802 in light of the greater need for more forces in the Med
+
+### Questions and criticisms
+- BW2:287: [James Leander Cathcart]() writes to SecState urging more energy from the federal government on the question of force in the Med; he notes that [Alexander Murray]() believes they should pay for peace for the next two years until the government will be more energized for political reasons (which Cathcart does not agree with) (8 October 1802)
