--- a/Front Page.page
+++ b/Front Page.page
@@ -19,6 +19,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Captivity]()
 - [Characteristics of Barbary ships]()
 - [Communications]()
+- [Comparisons between USA and others]()
 - [Conduct of naval ships]()
 - [Convoy]()
 - [Encounters between Europe and Barbary]()
